--- a/demo/composed-element-two.html
+++ b/demo/composed-element-two.html
@@ -1,3 +1,4 @@
+<link rel="import" href="../bower_components/polymer/polymer.html">
 <link rel="import" href="../simple-disabled-state.html">
 <link rel="import" href="../simple-focused-state.html">
 <dom-module id="composed-element-two">
