--- a/demo/stateful-element.html
+++ b/demo/stateful-element.html
@@ -9,6 +9,10 @@
 </dom-module>
 <script>
   Polymer({
-    is: 'stateful-element'
+    is: 'stateful-element',
+
+    properties: {
+      disabled: Boolean
+    }
   });
 </script>
