--- a/demo/extended-button-two.html
+++ b/demo/extended-button-two.html
@@ -1,3 +1,4 @@
+<link rel="import" href="../../components/polymer/polymer.html">
 <link rel="import" href="../bower_components/paper-shadow/paper-shadow.html">
 <link rel="import" href="../bower_components/paper-ripple/paper-ripple.html">
 <link rel="import" href="../bower_components/layout/layout.html">
