--- a/demo/extended-button.html
+++ b/demo/extended-button.html
@@ -1,3 +1,4 @@
+<link rel="import" href="../../bower_components/polymer/polymer.html">
 <dom-module id="extended-button">
   <template>
     <content></content>
